Primeira parte do JS completo

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
-    <link rel="stylesheet" href="https://www.youtube.com/redirect?event=video_description&redir_token=QUFFLUhqbmZlR2w3WTJUR0tSWHQzd2wxMmw3RGpta1lkZ3xBQ3Jtc0tuaTBpc0wzX0V3c0YyWHlUQXpHbnpDWVROdTRObFNaaEp5ckpxRVNhR1JlVEFrYmpWZEc3YTNxRDh3YUtzUUg2S2FhU2VyS2dxMFhoU0Z2d0JEcFlXc0JGVDczY1NMdklzYmNzV2gzak9aT1BVY0dDdw&q=https%3A%2F%2Fcdnjs.cloudflare.com%2Fajax%2Flibs%2Ffont-awesome%2F4.7.0%2Fcss%2Ffont-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="javascript/tarefas.js" defer></script>
 </head>
 <body>
 <div class="conteudo">
