--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,29 +10,31 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="javascript/tarefas.js" defer></script>
 </head>
+
 <body>
-<div class="conteudo">
-    <div class="topo">
-        <input type="text" id="inputNovaTarefa" placeholder="Insira a nova tarefa">
-        <button id="btnAddTarefa">
-            <i class="fa fa-plus"></i>
-        </button>
-    </div>
+    <div class="conteudo">
+        <div class="titulo">
+            <h1 class="titulozinho">
+
+            </h1>
+        </div>
+        <div class="topo">
+            <input type="text" id="inputNovaTarefa" placeholder="Insira a nova tarefa">
+            <button id="btnAddTarefa">
+                <i class="fa fa-plus"></i>
+            </button>
+        </div>
 
         <ul id="listaTarefas">
-            <li>
-                <span class="textoTarefa">Tarefa 1</span>
-            <div>
-                <button class="btnAcao">
-                    <i class="fa fa-pencil"></i>
-                </button>
-                <button class="btnAcao">
-                    <i class="fa fa-trash"></i>
-                </button>
-            </div>
-            </li>
+
         </ul>
-    
-</div>
+
+    </div>
+
+    <footer class="rodape">
+        <p>Desenvolvido por: <br>
+        Jean Ramalho</p>
+    </footer>
 </body>
+
 </html>
